fix input overlap.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,18 @@
+$header-height: 64px;
+
 html, body {
     font-family: 'Roboto', sans-serif;
+}
+
+.buka {
+    display: flex;
 }
 
 .buka__header {
     top: 0;
     z-index: 2;
     width: 100%;
-    height: 64px;
+    height: $header-height;
     position: fixed;
 }
 
@@ -14,7 +20,9 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 64px auto 0;
+    box-sizing: border-box;
+    margin-top: $header-height;
+    width: 100vw;
     padding: 0 1em;
     max-width: 980px;
 }
